--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="parent">
         <div class="col col-1"><img src="./images/chickenbiriyani.webp" alt=""><h5>Chicken Biriyani</h5><div class="c1"><p>Rating:9.6</p></div><button>more info</button></div>
         <div class="col col-2"><img src="./images/fried chicken.jpg" alt=""><h5>Fried Chicken</h5><div class="c1"><p>Rating:8.9</p></div><button>more info</button></div>
-        <div class="col col-3"><img src="./images/_Hyderabadi_Dum_Biryani_.jpg" alt=""><h5>Hyderabadi Biriyani</h5><div class="c1"><p>Rating:9.1</p></div><button>more info</button></div>
+        <div class="col col-3"><img src="./images/hyderabadi.webp" alt=""><h5>Hyderabadi Biriyani</h5><div class="c1"><p>Rating:9.1</p></div><button>more info</button></div>
         <div class="col col-4"><img src="./images/pepper-chicken-masala-1-6.jpg" alt=""><h5>Pepper Chicken</h5><div class="c1"><p>Rating:9</p></div><button>more info</button></div>
     </div>
     
